--- a/custom_components/toyota_na/manifest.json
+++ b/custom_components/toyota_na/manifest.json
@@ -3,10 +3,10 @@
     "domain": "toyota_na",
     "name": "Toyota (North America)",
     "config_flow": true,
-    "documentation": "https://github.com/widewing/ha_toyota_na",
-    "codeowners": ["@vanstinator, @widewing"],
+    "documentation": "https://github.com/USA-RedDragon/ha_toyota_na",
+    "codeowners": ["@USA-RedDragon"],
     "requirements": ["toyota-na==2.1.1"],
-    "issue_tracker": "https://github.com/widewing/ha-toyota-na/issues",
+    "issue_tracker": "https://github.com/USA-RedDragon/ha-toyota-na/issues",
     "version": "2.2.1",
     "iot_class": "cloud_polling"
 }
