--- a/custom_components/toyota_na/manifest.json
+++ b/custom_components/toyota_na/manifest.json
@@ -5,7 +5,7 @@
     "config_flow": true,
     "documentation": "https://github.com/USA-RedDragon/ha_toyota_na",
     "codeowners": ["@USA-RedDragon"],
-    "requirements": ["toyota-na==2.1.1"],
+    "requirements": [],
     "issue_tracker": "https://github.com/USA-RedDragon/ha-toyota-na/issues",
     "version": "2.2.1",
     "iot_class": "cloud_polling"
